2006-08-22  Peter Csordas <csordas@mit.bme.hu>

        * include/serialio.h (cyg_serial_baud_rate_t): Adding baud rate
	defines for 460800 and 921600 baud. 

2006-08-25  Gary Thomas  <gary@mlbassoc.com>

	* cdl/io_serial.cdl:  Set parent for more intuitive ConfigTool layout.

2006-05-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/common/tty.c (tty_init): Fix compiler warning with
	diag_printf() arguments.

2005-09-02  Sebastien Couret <sebastien.couret@elios-informatique.fr>

	* src/common/termiostty.c and 
	* tests/serial_echo.c : Fix compiler warning on a signedness 
	argument
	
2005-07-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/common/tty.c (tty_write): 
	* src/common/haldiag.c (haldiag_getc): Fixed pointer signness to
	avoid compiler warnings.
	* tests/*.c msglen should by an unsigned int to avoid compiler
	warnings.
	
2005-07-21  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/common/termiostty.c: Removed errbuf from priv. It was never
	being used after being allocated and never freed.

2005-06-27  Andrew Lunn <andrew.lunn@ascom.ch>

	* src/common/serial.c (serial_select): Swap the DSR locks and
	mutex locks around to avoid deadlocks with the rest of the code
	which uses this order.
	
2005-06-17  Andreas Gaer <andreas.gaer@baslerweb.com>

	* src/common/serial.c (serial_select): Lock DSRs inside
	serial_select() as the serial DSR calls functions manipulating the
	cbuf structs, leading to a race condition. Also use the mutex to
	avoid races between different threads.

2005-05-13  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/common/serial.c (serial_init): Fix compiler warnings about
	formats strings for diag_printf.	

2004-11-30  Jani Monoses <jani@iv.ro>

	 * cdl/io_serial.cdl : CYGPKG_IO_SERIAL_SELECT_SUPPORT requires 
	 CYGFUN_IO_FILEIO_SELECT specifically not just CYGPKG_FILEIO. The 
	 latter provides select support only in kernel configurations.
	 
2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/io_serial.cdl :